--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <app-navbar></app-navbar>
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
+<app-welcome></app-welcome>
 <router-outlet></router-outlet>
